@@ -1,12 +1,12 @@
 /**************************************************************************
  *  Copyright (C) 2013 Atlas of Living Australia
  *  All Rights Reserved.
- * 
+ *
  *  The contents of this file are subject to the Mozilla Public
  *  License Version 1.1 (the "License"); you may not use this file
  *  except in compliance with the License. You may obtain a copy of
  *  the License at http://www.mozilla.org/MPL/
- * 
+ *
  *  Software distributed under the License is distributed on an "AS
  *  IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
  *  implied. See the License for the specific language governing
@@ -28,7 +28,7 @@ import static java.awt.image.BufferedImage.TYPE_INT_ARGB;
 
 /**
  * HeatMap generator for species.
- * 
+ *
  * Code based on http://www.itstud.chalmers.se/~liesen/heatmap/
  *
  * @author ajay
@@ -229,7 +229,7 @@ public class HeatMap {
             x = (x * backgroundImage.getWidth());
             y = ((1 - y) * backgroundImage.getHeight());
 
-            return new Point(new Double(x).intValue(), new Double(y).intValue());
+            return new Point(Double.valueOf(x).intValue(), Double.valueOf(y).intValue());
         } catch (Exception e) {
             logger.error("Exception with translating " + e.getMessage(), e);
         }
@@ -252,8 +252,8 @@ public class HeatMap {
             }
 
             // we check if the maxValue = 0
-            // 0 tells us that there are no records in the 
-            // current "bounding box"            
+            // 0 tells us that there are no records in the
+            // current "bounding box"
             if (maxValue > 0) {
                 // we are doing "1" here to make sure nothing is 0
                 int roundFactor = 1;
